# GhostPost

./: LICENSE  README.md
GhostPostV3/backend/: requirements.txt
GhostPostV3/backend/app/: __init__.py  main.py
GhostPostV3/backend/app/core/: database.py  security.py
GhostPostV3/backend/app/forum/: routes.py  schemas.py
GhostPostV3/backend/app/zk/: routes.py  schemas.py
GhostPostV3/frontend/: index.html  package-lock.json  package.json  vite.config.js
GhostPostV3/frontend/src/: App.jsx
GhostPostV3/zk-simple/: Cargo.toml
GhostPostV3/zk-simple/core/: Cargo.toml
GhostPostV3/zk-simple/core/src/: lib.rs
GhostPostV3/zk-simple/methods/: Cargo.toml
GhostPostV3/zk-simple/methods/guest/: Cargo.toml
GhostPostV3/zk-simple/methods/guest/src/: main.rs
GhostPostV3/zk-simple/src/: Cargo.toml
